[tool.poetry]
name = "first-python-rpg"
version = "0.3.0"
description = "A Python RPG game built with Pyxel, featuring procedural generation and modern game mechanics."
authors = ["Your Name <you@example.com>"]
packages = [{include = "first_python_rpg", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pyxel = "^2.4.0"

[tool.poetry.scripts]
first-python-rpg = "first_python_rpg.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
